# VTI-D541-Windows

./: .gitignore
pcd/: Captured_Frame.pcd  RSmanifold.pcd  blank.pcd  cameraCloud.pcd  clamModel.pcd  clownNose3.pcd  clownNose4.pcd  coil.pcd  colortest.pcd  colortest2.pcd  combined.pcd  downscaled.pcd  icemaker_model2.pcd  man2Connection.pcd  man2scene_shiny.pcd  revo.pcd  revo2.pcd  robotCloud.pcd  spider1scene.pcd  stitch1.pcd  stitch2.pcd  tJoint3.pcd  tmp.pcd  zividJoint8.pcd  zividJoint9.pcd
pcd/Connection/: Connection.config  Connection.pcd  Connection2.config
pcd/Connection2/: Connection2.config  Connection2.pcd
pcd/RSmanifold6/: RSmanifold6.config  RSmanifold6.pcd
pcd/RStJoint/: RStJoint.config  RStJoint.pcd  RStJoint2.config  RStJoint2.pcd
pcd/RStJoint2/: RStJoint2.config
pcd/Schrader/: Schrader.config  Schrader.pcd  Schrader2.config  Schrader2.pcd
pcd/Schrader2/: Schrader2.pcd
pcd/Schrader3/: Schrader3.config  Schrader3.pcd  Schrader32.config
pcd/Schrader4/: Schrader4.config  Schrader4.pcd
pcd/Schrader5/: Schrader5.config  Schrader5.pcd
pcd/Schrader6/: Schrader6.config  Schrader6.pcd
pcd/brazeSide/: brazeSide.config  brazeSide.pcd
pcd/brazeSide2/: brazeSide2.config  brazeSide2.pcd
pcd/brazeSideRevo/: brazeSideRevo.config  brazeSideRevo.pcd
pcd/brazeSideRevo2/: Copy.pcd  brazeSideRevo2.config  brazeSideRevo2.pcd
pcd/brazeTop/: brazeTop.config  brazeTop.pcd
pcd/compressorUbend/: compressorUbend.config
pcd/condenserBraze1/: condenserBraze1.config  condenserBraze1.pcd
pcd/demoTJoint/: demoTJoint.config  demoTJoint.pcd  demoTJoint2.config
pcd/demoTJoint2/: demoTJoint2.config  demoTJoint2.pcd
pcd/icemaker_blue_model/: icemaker_blue_model.config  icemaker_blue_model.pcd
pcd/icemaker_model1/: icemaker_model1.pcd
pcd/man2joint/: man2joint.config  man2joint.pcd  man2joint2.config
pcd/man3Connection/: man3Connection.config  man3Connection.pcd
pcd/man3End/: man3End.config  man3End.pcd
pcd/pipeEnd/: pipeEnd.config  pipeEnd.pcd
pcd/spider1/: spider1.config  spider1.pcd
pcd/tJoint/: tJoint.config  tJoint.pcd  tJoint2.config  tJoint2.pcd
pcd/tJoint2/: tJoint2.config
pcd/tJoint3/: tJoint3.config  tJoint3.pcd
pcd/temp/: temp.config  temp.pcd
runconfigs/: RStest.config  coil.config  demo.config  model1.config  model2.config  model3.config  model4.config  model5.config  model6.config  model7.config  model8.config  test.config  test2.config
source/: CMakeLists.txt  ProgramNotes.txt  instructions.txt
source/Applications/Basic/Visualization/CaptureVis3D/: CaptureVis3D.cpp
source/Applications/Basic/Visualization/ReadPCLVis3D/: ReadPCLVis3D.cpp
source/Applications/Calibrate/: Calibrate.cpp  Calibrate.h  main.cpp
source/Applications/CreateModel/: CreateModel.cpp  CreateModel.h  main.cpp
source/Applications/DetectCylinder/: main.cpp
source/Applications/FeatureDetection/: Capturer.cpp  Capturer.h  PointsToRobot.cpp  PointsToRobot.h  main.cpp  objectdetector.cpp  objectdetector.h
source/Applications/FormTest/: main.cpp
source/Applications/RealSenseTest/: main.cpp
source/Camera/CaptureAssistant/: CaptureAssistant.cpp
source/Camera/RealSenseTest/: main.cpp
source/Camera/Stitch/: Stitch.cpp  Stitch.hpp
source/Detection/Base/: main.cpp
source/Detection/Calibrate/: Calibrate.cpp  Calibrate.h  main.cpp
source/Detection/CalibrateWithBoard/: CalibrateWithBoard.cpp
source/Detection/DetectCylinder/: main.cpp
source/Detection/DetectSphere/: main.cpp
source/Detection/FeatureDetection/: Capturer.h  PointsToRobot.cpp  PointsToRobot.h  PointsToUR.cpp  PointsToUR.h  main.cpp  objectdetector.cpp  objectdetector.h
source/Detection/TestCalibration/: TestCalibration.cpp
source/ObjectDetection/LeakLocationFinder/: LeakLocationFinder.cpp
source/ObjectDetection/RSDCorrespondence/: RSDCorrespondence.cpp
source/ObjectDetection/SHOTCorrespondence/: SHOTCorrespondence.cpp
source/ObjectDetection/SrikarFeatureDetection/: SrikarFeatureDetection.cpp
source/Utilities/CapturePCDZivid/: CapturePCDZivid.cpp
source/Utilities/CaptureVis3D/: CaptureVis3D.cpp
source/Utilities/ColorFilter/: ColorFilter.cpp
source/Utilities/CreateModel/: CreateModel.cpp  CreateModel.h
source/Utilities/Crop/: Crop.cpp
source/Utilities/CudaTest/: CudaTest.cu
source/Utilities/Downscale/: Downscale.cpp
source/Utilities/KeypointTest/: KeypointTest.cpp
source/Utilities/OutlierRemove/: OutlierRemove.cpp
source/Utilities/PCDCrop/: PCDCrop.cpp
source/Utilities/ReadPCLVis3D/: ReadPCLVis3D.cpp
source/Utilities/RemoveRegions/: RemoveRegions.cpp
source/Utilities/URTest/: URTest.cpp
source/Utilities/ViewPCD/: ViewPCD.cpp
source/Utilities/VisualCrop/: VisualCrop.cpp
source/Utilities/VoxelDownsample/: VoxelDownsample.cpp
txt/: Bad cylinders.txt  EpsonCalibration.txt  Good cylinders.txt  cal.txt  calpoints.txt  calset.yml  coilset.yml  coilset2.yml  compressor.config  compressor.yml  condenserInside.yml  config.txt  cylConfig1.config  cylConfig2.config  cylConfig3.config  default2.yml  defaultset.yml  demoSettings.yml  dim.txt  man2config.txt  manifoldRealSense.config  newDimensions.txt  noRes.config  points.txt  reasonablePoints.txt  regtransform.cal  regtransform2.cal  revoScene.config  set.yml  set2.yml  startingDimensions.txt  stddevtest.txt  tmp.config  transform.cal  ur points.txt  zividcal.yaml  zividtransform.yaml
